tests/ui/launch/context_brand_mismatch.rx
//@ spec: RXS-0074, RXS-0075
kernel fn saxpy(out: ViewMut<global, f32>, x: View<global, f32>, n: usize, t: ThreadCtx<1>) {
    let i = t.global_id();
    if i < n {
        out[i] = x[i];
    }
}

fn run<C, D>(stream: Stream<C>, bad: Buffer<D, f32>, x: Buffer<C, f32>, n: usize) {
    stream.launch(saxpy, GridDim(n), BlockDim(n), (bad, x, n)); //~ ERROR RX3006
}

fn main() {}
